--- a/en-vivo/espn-extra/index.html
+++ b/en-vivo/espn-extra/index.html
@@ -1,22 +1,27 @@
 
 <!doctype html>
-<html lang="es">
+<html lang="en">
 <head>
-<script type="text/javascript" src="/z-4834911"></script>
+
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-<meta name="description" content="ESPN Extra es un canal de televisión por suscripción en alta definición, especializado en la emisión de eventos deportivos exclusivos, y disponible a lo largo de toda América Latina.">
-<link rel="canonical" href="https://librefutboltv.com/en-vivo/espn-extra/" />
+<meta name="description" content="ESPN 3 en VIVO es un canal deportivo creado en el año 2002 y que comenzó a emitirse en Argentina, Bolivia, Chile, Paraguay y Uruguay, despues en Perú. Su programación es integramente deportivo, fundamentalmente sobre fútbol, tenis entre otras disciplinas. Asimismo, emiten programas sobre los campeonatos de diferentes deportes de Argentina.">
+<meta name="robots" content="noodp" />
+<link rel="canonical" href="https://https://futbollibretv.net/espn-3/" />
+<link rel="publisher" href="https://plus.google.com/110597823755835387054" />
 <meta property="og:locale" content="es_ES" />
 <meta property="og:type" content="article" />
-<meta property="og:title" content="Click para ver ESPN Extra en VIVO ONLINE en DIRECTO por Internet - Fútbol Libre TV" />
-<meta property="og:description" content="ESPN Extra es un canal de televisión por suscripción en alta definición, especializado en la emisión de eventos deportivos exclusivos, y disponible a lo largo de toda América Latina." />
-<meta property="og:url" content="https://librefutboltv.com/en-vivo/espn-extra/" />
+<meta property="og:title" content="Click para ESPN 3 en VIVO ONLINE en DIRECTO por Internet - Fútbol Libre TV" />
+<meta property="og:description" content="ESPN  en VIVO es un canal deportivo creado en el año 2002 y que comenzó a emitirse en Argentina, Bolivia, Chile, Paraguay y Uruguay, despues en Perú. Su programación es integramente deportivo, fundamentalmente sobre fútbol, tenis entre otras disciplinas. Asimismo, emiten programas sobre los campeonatos de diferentes deportes de Argentina." />
+<meta property="og:url" content="http://https://futbollibretv.net/espn-3/" />
 <meta property="og:site_name" content="Fútbol Libre TV" />
-<meta property="og:image" content="https://librefutboltv.com/img/ESPN_Extra.png" />
+<meta property="article:publisher" content="https://www.facebook.com/FutbolLibre/" />
+<meta property="og:image" content="http://https://futbollibretv.net/img/ESPN_3.png" />
 <meta name="twitter:card" content="summary_large_image" />
-<meta name="twitter:description" content="Se enfoca en la emisión de eventos en vivo, como el fútbol internacional, tenis y deportes de ligas estadounidenses, transmitiendo sólo algunos de los programas de estudio que se emiten en las señales regulares." />
-<meta name="twitter:title" content="Ver ESPN Extra en VIVO ONLINE en DIRECTO por Internet" />
+<meta name="twitter:description" content="Ver ESPN 3 en VIVO ONLINE por Internet en DIRECTO. Canal acceso instantáneo a los mejores partidos de futbol y el mejor deporte. Mirar Ya" />
+<meta name="twitter:title" content="Ver ESPN 3 en VIVO ONLINE en DIRECTO por Internet" />
+<meta name="twitter:image" content="http://https://futbollibretv.net/img/ESPN_3.png" />
+<meta name="author" content="Fútbol Libre">
 <link rel="apple-touch-icon" sizes="57x57" href="../../favicon/apple-icon-57x57.png">
 <link rel="apple-touch-icon" sizes="60x60" href="../../favicon/apple-icon-60x60.png">
 <link rel="apple-touch-icon" sizes="72x72" href="../../favicon/apple-icon-72x72.png">
@@ -34,78 +39,90 @@
 <meta name="msapplication-TileColor" content="#ffffff">
 <meta name="msapplication-TileImage" content="../../favicon/ms-icon-144x144.png">
 <meta name="theme-color" content="#ffffff">
-<title>ESPN Extra en VIVO ONLINE en Directo por Internet - Fútbol Libre TV</title>
-
+<title>ESPN 3 en VIVO (Ver en DIRECTO) - Fútbol Libre TV</title>
+<link href="../css/styles.css" rel="stylesheet">
+  	<link href='https://unpkg.com/boxicons@2.1.1/css/boxicons.min.css' rel='stylesheet'>
 <link href="../../css/bootstrap.css" rel="stylesheet">
 
 <link href="../../css/portada.css" rel="stylesheet">
-<style type="text/css"> iframe{width: 90%; height: 600px;}@media only screen and (max-width: 600px){iframe{width: 100%; height: 360px;}}</style>
-<script async src='/cdn-cgi/bm/cv/669835187/api.js'></script></head>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+</head>
 <body>
-<div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-white border-bottom box-shadow">
-<a class="my-0 mr-md-auto font-weight-normal fl" rel="home" href="https://librefutboltv.com">
-Fútbol Libre TV
-</a>
-
-<a class="btn btn-outline-fl" rel="home" href="https://librefutboltv.com">
-<img src="https://librefutboltv.com/img/logo-futbolLibre.webp" alt="Logo de Fútbol Libre TV" width="25" height="25">
-</a>
-</div>
+<nav>
+        <div class="nav-bar">
+            <i class='bx bx-menu sidebarOpen' ></i>
+            <span class="logo navLogo"><a href="/">Futbol Libre</a></span>
+            <div class="menu">
+                <div class="logo-toggle">
+                    <span class="logo"><a href="#"><img src="/img/logo-futbolLibre.webp" alt="Logo de Fútbol Libre TV" width="25" height="25">Futbol Libre</a></span>
+                    <i class='bx bx-x siderbarClose'></i>
+                </div>
+                <ul class="nav-links">
+                    <li><a href="/en-vivo/espn-1/">ESPN</a></li>
+                    <li><a href="/en-vivo/tyc-sports/">Tyc Sports</a></li>
+                    <li><a href="/en-vivo/directv-sports
+/">DS Sports</a></li>
+                    <li><a href="/en-vivo/espn-premium/">ESPN Premium</a></li>
+                    <li><a href="/en-vivo/tv-publica/">TV Publica</a></li>
+                </ul>
+            </div>
+            <div class="darkLight-searchBox">
+                <div class="dark-light">
+                    <i class='bx bx-moon moon'></i>
+                    <i class='bx bx-sun sun'></i>
+                </div>
+                <div class="searchBox">
+                   <div class="searchToggle">
+                    <i class='bx bx-x cancel'></i>
+                    <i class='bx bx-search search'></i>
+                   </div>
+                    <div class="search-field">
+                        <input type="text" placeholder="Search...">
+                        <i class='bx bx-search'></i>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </nav>
 <div class="container">
 <div class="card-deck mb-3 text-center">
 <div class="card mb-4 box-shadow">
 <div class="card-header">
-<h1 class="my-0 font-weight-normal">ESPN Extra</h1>
+<h1 class="my-0 font-weight-normal">ESPN 3 en VIVO</h1>
 </div>
+
 
 <div class="card-body">
 <ul class="list-unstyled mt-3 mb-4">
 <div class="embed-responsive embed-responsive-16by9">
-<iframe allow="encrypted-media" src="https://bestformula.one/dtvpl2.html?id=1107" width="100%" height="100%" name="iframe" id="iframe" frameborder="0" scrolling="no" style="position:absolute;" allowfullscreen></iframe>
+<iframe allow="encrypted-media" src="https://bestformula.one/dtvpl2.html?id=1103" width="100%" height="100%" name="iframe" id="iframe" frameborder="0" scrolling="no" style="position:absolute;" allowfullscreen></iframe>
 </div>
-
 <div align="left">
 <p><strong>Opciones:</strong></p>
-<a class="btn btn-fl" target="iframe" href="https://bestformula.one/dtvpl2.html?id=1107" onclick="document.getElementById('iframe').src='https://bestformula.one/dtvpl2.html?id=1107'">Opción 1</a>
-<a class="btn btn-fl" target="iframe" href="//embed49.thaidomains.co.in/cvatt.html?get=RVNQTkhE" onclick="document.getElementById('iframe').src='//embed49.thaidomains.co.in/cvatt.html?get=RVNQTkhE'">Opción 2</a>
+<a class="btn btn-fl" target="iframe" href="//bestformula.one/dtvpl2.html?id=1103" onclick="document.getElementById('iframe').src='//bestformula.one/dtvpl2.html?id=1103'">Opción 1 (AR)</a>
+<a class="btn btn-fl" target="iframe" href="//embed49.thaidomains.co.in/cvatt.html?get=RVNQTjM" onclick="document.getElementById('iframe').src='//embed49.thaidomains.co.in/cvatt.html?get=RVNQTjM'">Opción 2 (AR)</a>
+<a class="btn btn-fl" target="iframe" href="https://bestformula.one/dtvpl2.html?id=1102" onclick="document.getElementById('iframe').src='https://bestformula.one/dtvpl2.html?id=1102'">Opción 3 (Cono Sur)</a>
+<a class="btn btn-fl" target="iframe" href="https://bestformula.one/dtvpl2.html?id=1101" onclick="document.getElementById('iframe').src='https://bestformula.one/dtvpl2.html?id=1101'">Opción 4 (MX)</a>
+</div>
 </ul>
 <button type="button" class="btn btn-lg btn-block btn-fl" onclick="location.reload();">Recargar página</button>
 </div>
 </div>
 </div>
 <div class="sharethis-inline-share-buttons"></div>
+<br />
+<p align="left"><strong>ESPN 3 en vivo</strong> es una señal multiplataforma de la cadena ESPN, que comenzó a emitir el 14 de noviembre de 2011 para toda América Latina. Está dedicado a un público más joven, su perfil es de hombres entre 16 y 24 años de edad, con nivel económico alto. <strong>ESPN3</strong> es el primer canal deportivo en <strong>Latinoamérica</strong> que tiene la disponibilidad de verse en forma simultánea en diferentes plataformas, es decir, tanto en televisión, celulares, computadores y tabletas digitales.</p>
+<p align="left">La <strong>programación</strong> de ESPN 3 está dedicada a los deportes de acción, es decir los deportes extremos tanto de verano como de invierno, así como los de aventura, surf y running. Desde su lanzamiento, se ofrece en definición estándar y alta definición. Es un servicio de <strong>streaming</strong> de programas deportivos de la cadena ESPN para clientes de Estados Unidos. La red está disponible para personas que reciben conexión a Internet de alta velocidad o suscripción de televisión por cable.</p>
+<p align="left">ESPN 3 señal en vivo tambien transmite otros torneos el fútbol americano universitario, baloncesto universitario de la NCAA, la NBA, Copas Mundiales de la FIFA, clasificación al mundial, la Premier League, la Serie A de Italia, la Liga de España y otras grandes ligas del fútbol internacional, los cuatro “Grand Slam” eventos de tenis, campeonatos de golf, el rugby mundial.</p>
+<p align="center"><img src="https://https://futbollibretv.net/img/ESPN_3.png" alt="logo del canal ESPN 3" title="ESPN 3 en vivo" width="%50" height="140" /></p>
+<div id="footer"></div>
+<script>
+$(document).ready(function() {
+	$("#footer").load("../../html/footer.html");
+});
+</script>
+</div>
 
-<br />
-<p align="left"><strong>ESPN Extra en VIVO</strong> es un canal de televisión por suscripción en alta definición, especializado en la emisión de eventos deportivos exclusivos, y disponible a lo largo de toda América Latina.</p>
-<p align="left">Inició sus transmisiones el 28 de abril de 2009 exclusivamente en Brasil, y el 29 de noviembre de ese año en el resto de América Latina.</p>
-<p align="left">Hasta el 31 de agosto de 2015, la señal fue conocida como <strong>ESPN HD</strong>, luego fue renombrada como <strong>ESPN+</strong>​.</p>
-<p align="left">Se enfoca en la emisión de eventos en vivo, como el fútbol internacional, tenis y deportes de ligas estadounidenses, transmitiendo sólo algunos de los programas de estudio que se emiten en las señales regulares.</p>
-<p align="left"><strong>ESPN Extra</strong>, también fue el anterior nombre de un canal de ESPN en Sudamérica, que se habilitaba solamente para la transmisión de ciertos eventos, como rugby y polo argentino, Majors de Golf y Grand Slam de tenis, a través de DirecTV.</p>
-<p align="left">Del 9 al 12 de marzo de 2020, el canal tomó brevemente el nombre de <strong>ESPN Extra</strong>, y a partir del 1 de mayo del mismo año, cambió oficialmente a su nombre actual.</p>
-<p align="center"><img src="https://librefutboltv.com/img/logo-canal/ESPN_Extra.png" alt="Logo del canal ESPN Extra" title="ESPN Extra en vivo"></p>
-<br />
-<footer class="pt-4 my-md-5 pt-md-5 border-top">
-<div class="row">
-<div class="col-6 col-md">
-<h5>Social</h5>
-<ul class="list-unstyled text-small">
-<li><a class="text-muted" href="https://twitter.com/LibreFutbolTV1" target="_blank">Twitter</a></li>
-<li><a class="text-muted" href="https://www.instagram.com/librefutbolweb/" target="_blank">Instagram</a></li>
-<li><a class="text-muted" href="https://www.youtube.com/channel/UCNdS4deWHyFLqB8o49wqo7A" target="_blank">YouTube</a></li>
-</ul>
-</div>
-<div class="col-6 col-md">
-<h5>Fútbol Libre</h5>
-<ul class="list-unstyled text-small">
-<li><a class="text-muted" href="https://librefutboltv.com/DMCA.html">DMCA</a></li>
-<br />
-<div style="text-align:center;">
-<small class="d-block mb-3 text-muted">Fútbol Libre TV 2023 &copy; Todos los derechos reservados.</small>
-</ul>
-</div>
-</div>
-</footer>
-</div>
 <script type="text/javascript" src="//platform-api.sharethis.com/js/sharethis.js#property=5ab9c9531fff98001395a59a&product=inline-share-buttons"></script>
 </body>
 </html>
