--- a/en-vivo/espn-premium/index.html
+++ b/en-vivo/espn-premium/index.html
@@ -2,25 +2,26 @@
 <!doctype html>
 <html lang="es">
 <head>
-<script type="text/javascript" src="/z-4834911"></script>
+
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <meta name="description" content="Ver canal ESPN Premium en VIVO Online por Internet en DIRECTO. Futbol Libre TV Television gratis por internet">
 <meta name="author" content="Fútbol Libre">
-<link rel="canonical" href="https://librefutboltv.com/en-vivo/espn-premium/" />
+<link rel="canonical" href="https://https://futbollibretv.net/en-vivo/espn-premium/" />
 <meta property="og:locale" content="es_ES" />
 <meta property="og:type" content="article" />
 <meta property="og:title" content="Fútbol Libre TV. Click para ver ESPN Premium en VIVO ONLINE por Internet en DIRECTO" />
 <meta property="og:description" content="Fútbol Libre TV. Ver canal ESPN Premium en VIVO y en directo ONLINE gratis por Internet" />
-<meta property="og:url" content="https://librefutboltv.com/en-vivo/espn-premium/" />
+<meta property="og:url" content="https://https://futbollibretv.net/en-vivo/espn-premium/" />
 <meta property="og:site_name" content="Fútbol Libre TV" />
-<meta property="og:image" content="https://librefutboltv.com/img/ESPN_Premium.png" />
+<meta property="og:image" content="https://https://futbollibretv.net/img/ESPN_Premium.png" />
 <meta name="twitter:card" content="summary_large_image" />
 <meta name="twitter:description" content="Fútbol Libre TV Ver ESPN Premium en VIVO ONLINE por Internet en DIRECTO. Mirar Futbol argentino en vivo" />
 <meta name="twitter:title" content="Fútbol Libre TV Ver ESPN Premium en VIVO ONLINE en DIRECTO por Internet" />
-<meta name="twitter:image" content="https://librefutboltv.com/img/ESPN_Premium.png" />
+<meta name="twitter:image" content="https://https://futbollibretv.net/img/ESPN_Premium.png" />
 <title>Ver Canal ESPN Premium online en VIVO y en directo. Futbol Libre TV</title>
-
+<link href="../css/styles.css" rel="stylesheet">
+  	<link href='https://unpkg.com/boxicons@2.1.1/css/boxicons.min.css' rel='stylesheet'>
 <link rel="apple-touch-icon" sizes="57x57" href="../../favicon/apple-icon-57x57.png">
 <link rel="apple-touch-icon" sizes="60x60" href="../../favicon/apple-icon-60x60.png">
 <link rel="apple-touch-icon" sizes="72x72" href="../../favicon/apple-icon-72x72.png">
@@ -45,15 +46,42 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <script async src='/cdn-cgi/bm/cv/669835187/api.js'></script></head>
 <body>
-<div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-white border-bottom box-shadow">
-<a class="my-0 mr-md-auto font-weight-normal fl" rel="home" href="https://librefutboltv.com">
-Fútbol Libre TV
-</a>
-
-<a class="btn btn-outline-fl" rel="home" href="https://librefutboltv.com">
-<img src="https://librefutboltv.com/img/logo-futbolLibre.webp" alt="Logo de Fútbol Libre TV" width="25" height="25">
-</a>
-</div>
+<nav>
+        <div class="nav-bar">
+            <i class='bx bx-menu sidebarOpen' ></i>
+            <span class="logo navLogo"><a href="/">Futbol Libre</a></span>
+            <div class="menu">
+                <div class="logo-toggle">
+                    <span class="logo"><a href="#"><img src="/img/logo-futbolLibre.webp" alt="Logo de Fútbol Libre TV" width="25" height="25">Futbol Libre</a></span>
+                    <i class='bx bx-x siderbarClose'></i>
+                </div>
+                <ul class="nav-links">
+                    <li><a href="/en-vivo/espn-1/">ESPN</a></li>
+                    <li><a href="/en-vivo/tyc-sports/">Tyc Sports</a></li>
+                    <li><a href="/en-vivo/directv-sports
+/">DS Sports</a></li>
+                    <li><a href="/en-vivo/espn-premium/">ESPN Premium</a></li>
+                    <li><a href="/en-vivo/tv-publica/">TV Publica</a></li>
+                </ul>
+            </div>
+            <div class="darkLight-searchBox">
+                <div class="dark-light">
+                    <i class='bx bx-moon moon'></i>
+                    <i class='bx bx-sun sun'></i>
+                </div>
+                <div class="searchBox">
+                   <div class="searchToggle">
+                    <i class='bx bx-x cancel'></i>
+                    <i class='bx bx-search search'></i>
+                   </div>
+                    <div class="search-field">
+                        <input type="text" placeholder="Search...">
+                        <i class='bx bx-search'></i>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </nav>
 <div class="container">
 <div class="card-deck mb-3 text-center">
 <div class="card mb-4 box-shadow">
@@ -78,7 +106,7 @@ Fútbol Libre TV
 </div>
 <div class="sharethis-inline-share-buttons"></div>
 <br />
-<center><img src="//librefutboltv.com/img/ESPN_Premium.png" alt="Logo del canal ESPN Premium" title="ESPN Premium en vivo" width="%50" height="140" /></center>
+<center><img src="//https://futbollibretv.net/img/ESPN_Premium.png" alt="Logo del canal ESPN Premium" title="ESPN Premium en vivo" width="%50" height="140" /></center>
 <br /><br />
 	
 	
@@ -94,7 +122,7 @@ Fútbol Libre TV
 	
 	
 	<div id="item1"><h2>¿Qué es el canal ESPN Premium en vivo?</h2>
-<p align="left"> Ver canal <strong>ESPN Premium</strong> online en vivo y en directo. <strong>ESPN Premium</strong> (antes conocido como <strong>Fox Sports Premium</strong>) es un canal de suscripción argentino que transmite en vivo y en directo junto a <strong><a href="https://librefutboltv.com/en-vivo/tnt-sports/">TNT Sports Premium</a></strong> los partidos de la <strong>Liga Profesional del futbol Argentino</strong> y la <strong>Superliga</strong>.
+<p align="left"> Ver canal <strong>ESPN Premium</strong> online en vivo y en directo. <strong>ESPN Premium</strong> (antes conocido como <strong>Fox Sports Premium</strong>) es un canal de suscripción argentino que transmite en vivo y en directo junto a <strong><a href="https://https://futbollibretv.net/en-vivo/tnt-sports/">TNT Sports Premium</a></strong> los partidos de la <strong>Liga Profesional del futbol Argentino</strong> y la <strong>Superliga</strong>.
 		
 		</p> </div>
 	
@@ -103,7 +131,7 @@ Fútbol Libre TV
 <p align="left">
 	
 	
-	Para ver el canal de <strong><a href="https://librefutboltv.com/en-vivo/espn-premium/" title="Ver ESPN Premium online en vivo y en directo por internet gratis">ESPN Premium</a></strong> gratis en vivo y en directo debe ingresar a <a href="https://librefutboltv.com/"><strong>Futbol Libre TV</strong></a> a la hora que este jugando un partido del <strong>fútbol argentino</strong> y luego hacer click en logo del canal para luego en la siguiente pagina darle click en Play en el reproductor que se encuentra arriba del logo y abajo del titulo "<strong>Canal ESPN Premium Online en VIVO y en directo</strong>". En el mismo se encuentran varias opciones para elegir el canal a ver en vivo. También podrá ver <strong><a href="https://librefutboltv.com/en-vivo/espn-premium/" title="Ver ESPN Premium online en vivo y en directo por internet gratis">ESPN Premium</a></strong> en vivo por la pagina oficial de EspnPlay.com para ver desde la <strong>computadora/ordenador</strong>, <strong>celular</strong> o <strong>Chromecast</strong>. </div> </p>
+	Para ver el canal de <strong><a href="https://https://futbollibretv.net/en-vivo/espn-premium/" title="Ver ESPN Premium online en vivo y en directo por internet gratis">ESPN Premium</a></strong> gratis en vivo y en directo debe ingresar a <a href="https://https://futbollibretv.net/"><strong>Futbol Libre TV</strong></a> a la hora que este jugando un partido del <strong>fútbol argentino</strong> y luego hacer click en logo del canal para luego en la siguiente pagina darle click en Play en el reproductor que se encuentra arriba del logo y abajo del titulo "<strong>Canal ESPN Premium Online en VIVO y en directo</strong>". En el mismo se encuentran varias opciones para elegir el canal a ver en vivo. También podrá ver <strong><a href="https://https://futbollibretv.net/en-vivo/espn-premium/" title="Ver ESPN Premium online en vivo y en directo por internet gratis">ESPN Premium</a></strong> en vivo por la pagina oficial de EspnPlay.com para ver desde la <strong>computadora/ordenador</strong>, <strong>celular</strong> o <strong>Chromecast</strong>. </div> </p>
 	
 	
 <div id="item3"><h2>Programación de ESPN Premium en vivo y en directo las 24 horas</h2>
@@ -112,13 +140,13 @@ Fútbol Libre TV
 	
 	
 	<div id="item4"><h2>¿Cómo ver los partidos de fútbol Argentino en directo sin pagar?</h2>
-<p align="left">Los dos canales que se encargan de transmitir en vivo y en directo los partidos del fútbol Argentino son <strong><a href="https://librefutboltv.com/en-vivo/espn-premium/">ESPN PREMIUM</a></strong> y <strong><a href="https://librefutboltv.com/en-vivo/tnt-sports/">TNT Sports Premium</a></strong>. Antes estos partidos eran transmitidos en directo por <strong>Futbol para Todos</strong>.
+<p align="left">Los dos canales que se encargan de transmitir en vivo y en directo los partidos del fútbol Argentino son <strong><a href="https://https://futbollibretv.net/en-vivo/espn-premium/">ESPN PREMIUM</a></strong> y <strong><a href="https://https://futbollibretv.net/en-vivo/tnt-sports/">TNT Sports Premium</a></strong>. Antes estos partidos eran transmitidos en directo por <strong>Futbol para Todos</strong>.
 	
 	</p> </div>
 	
 	
 	<div id="item5"><h2>¿Cómo ver el Pack Fútbol en vivo y en directo?</h2>
-<p align="left"> El sistema de <strong>Pack Fútbol</strong> es un abono que transmite los canales online de <strong><a href="https://librefutboltv.com/en-vivo/espn-premium/">ESPN PREMIUM</a></strong> (antes llamado <strong>Fox Sports Premium</strong>) y <strong><a href="https://librefutboltv.com/en-vivo/tnt-sports/">TNT Sports Premium</a></strong> que pasan todos los partidos del campeonato argentino en vivo y en directo en calidad HD.
+<p align="left"> El sistema de <strong>Pack Fútbol</strong> es un abono que transmite los canales online de <strong><a href="https://https://futbollibretv.net/en-vivo/espn-premium/">ESPN PREMIUM</a></strong> (antes llamado <strong>Fox Sports Premium</strong>) y <strong><a href="https://https://futbollibretv.net/en-vivo/tnt-sports/">TNT Sports Premium</a></strong> que pasan todos los partidos del campeonato argentino en vivo y en directo en calidad HD.
 	
 	</p> </div>
 	
@@ -142,7 +170,7 @@ Fútbol Libre TV
 <div class="col-6 col-md">
 <h5>Fútbol Libre</h5>
 <ul class="list-unstyled text-small">
-<li><a class="text-muted" href="https://librefutboltv.com/DMCA.html">DMCA</a></li>
+<li><a class="text-muted" href="https://https://futbollibretv.net/DMCA.html">DMCA</a></li>
 <br />
 <div style="text-align:center;">
 <small class="d-block mb-3 text-muted">Fútbol Libre TV 2023 &copy; Todos los derechos reservados.</small>
