--- a/en-vivo/fox-sports-1/index.html
+++ b/en-vivo/fox-sports-1/index.html
@@ -2,25 +2,27 @@
 <!doctype html>
 <html lang="en">
 <head>
-<script type="text/javascript" src="/z-4834911"></script>
+
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <meta name="description" content="Fox Sports en VIVO, ver canal de televisión por suscripción especializado en deportes que emite las 24 horas del día para Latinoamérica. Transmite en vivo la Copa Libertadores, Copa Sudamericana, UEFA Champions League, UEFA Europa League, Serie A de Italia, Bundesliga de Alemania, Copa Mundial de Clubes, NFL, MLB, entre otros.">
 <meta name="author" content="Fútbol Libre">
 <title>Ver Fox Sports 1 en VIVO ONLINE - Fútbol Libre TV</title>
 <meta name="robots" content="noodp" />
-<link rel="canonical" href="https://librefutboltv.com/en-vivo/fox-sports-1/" />
+            <link href="../css/styles.css" rel="stylesheet">
+  	<link href='https://unpkg.com/boxicons@2.1.1/css/boxicons.min.css' rel='stylesheet'>
+<link rel="canonical" href="https://https://futbollibretv.net/en-vivo/fox-sports-1/" />
 <meta property="og:locale" content="es_ES" />
 <meta property="og:type" content="article" />
 <meta property="og:title" content="Click para ver Fox Sports 1 en VIVO ONLINE en DIRECTO por Internet - Fútbol Libre TV" />
 <meta property="og:description" content="Fox Sports en VIVO, ver canal de televisión por suscripción especializado en deportes que emite las 24 horas del día para Latinoamérica. Transmite en vivo la Copa Libertadores, Copa Sudamericana, UEFA Champions League, UEFA Europa League, Serie A de Italia, Bundesliga de Alemania, Copa Mundial de Clubes, NFL, MLB, entre otros." />
-<meta property="og:url" content="https://librefutboltv.com/en-vivo/fox-sports-1/" />
+<meta property="og:url" content="https://https://futbollibretv.net/en-vivo/fox-sports-1/" />
 <meta property="og:site_name" content="Fútbol Libre TV" />
-<meta property="og:image" content="https://librefutboltv.com/img/Fox_Sports_1.png" />
+<meta property="og:image" content="https://https://futbollibretv.net/img/Fox_Sports_1.png" />
 <meta name="twitter:card" content="summary_large_image" />
 <meta name="twitter:description" content="Fox Sports en VIVO es un canal de televisión por suscripción especializado en deportes que emite las 24 horas del día para Latinoamérica. Transmite en vivo la Copa Libertadores, Copa Sudamericana, UEFA Champions League, UEFA Europa League, Serie A de Italia, Bundesliga de Alemania, Copa Mundial de Clubes, NFL, MLB, entre otros." />
 <meta name="twitter:title" content="Ver Fox Sports 1 en VIVO ONLINE en DIRECTO por Internet" />
-<meta name="twitter:image" content="https://librefutboltv.com/img/Fox_Sports_1.png" />
+<meta name="twitter:image" content="https://https://futbollibretv.net/img/Fox_Sports_1.png" />
 
 <link rel="apple-touch-icon" sizes="57x57" href="../../favicon/apple-icon-57x57.png">
 <link rel="apple-touch-icon" sizes="60x60" href="favicon/apple-icon-60x60.png">
@@ -46,12 +48,42 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <script async src='/cdn-cgi/bm/cv/669835187/api.js'></script></head>
 <body>
-<div id="navbar"></div>
-<script>
-            $(document).ready(function() {
-                $("#navbar").load("../../html/navbar.html");
-            });
-         </script>
+<nav>
+        <div class="nav-bar">
+            <i class='bx bx-menu sidebarOpen' ></i>
+            <span class="logo navLogo"><a href="/">Futbol Libre</a></span>
+            <div class="menu">
+                <div class="logo-toggle">
+                    <span class="logo"><a href="#"><img src="/img/logo-futbolLibre.webp" alt="Logo de Fútbol Libre TV" width="25" height="25">Futbol Libre</a></span>
+                    <i class='bx bx-x siderbarClose'></i>
+                </div>
+                <ul class="nav-links">
+                    <li><a href="/en-vivo/espn-1/">ESPN</a></li>
+                    <li><a href="/en-vivo/tyc-sports/">Tyc Sports</a></li>
+                    <li><a href="/en-vivo/directv-sports
+/">DS Sports</a></li>
+                    <li><a href="/en-vivo/espn-premium/">ESPN Premium</a></li>
+                    <li><a href="/en-vivo/tv-publica/">TV Publica</a></li>
+                </ul>
+            </div>
+            <div class="darkLight-searchBox">
+                <div class="dark-light">
+                    <i class='bx bx-moon moon'></i>
+                    <i class='bx bx-sun sun'></i>
+                </div>
+                <div class="searchBox">
+                   <div class="searchToggle">
+                    <i class='bx bx-x cancel'></i>
+                    <i class='bx bx-search search'></i>
+                   </div>
+                    <div class="search-field">
+                        <input type="text" placeholder="Search...">
+                        <i class='bx bx-search'></i>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </nav>
 <div class="container">
 <div class="card-deck mb-3 text-center">
 <div class="card mb-4 box-shadow">
@@ -94,7 +126,7 @@
 </div>
 <div class="sharethis-inline-share-buttons"></div>
 <br />
-<img src="https://librefutboltv.com/img/Fox-Sports.png" alt="Logo del canal Fox Sports 1" title="Fox Sports 1 en vivo" width="%50" height="140" /><br><br>
+<img src="https://https://futbollibretv.net/img/Fox-Sports.png" alt="Logo del canal Fox Sports 1" title="Fox Sports 1 en vivo" width="%50" height="140" /><br><br>
 <p align="left">
 <strong>Fox Sports</strong> es un canal de televisión por suscripción especializado en deportes que emite las 24 horas del día para Latinoamérica. Transmite en vivo la <strong>Copa Libertadores</strong>, <strong>Copa Sudamericana</strong>, <strong>UEFA Champions League</strong>, <strong>UEFA Europa League</strong>, <strong>Serie A de Italia</strong>, Bundesliga de Alemania, Copa Mundial de Clubes, NFL, MLB, entre otros.
 </p>
@@ -113,7 +145,7 @@
 <div class="col-6 col-md">
 <h5>Fútbol Libre</h5>
 <ul class="list-unstyled text-small">
-<li><a class="text-muted" href="https://librefutboltv.com/DMCA.html">DMCA</a></li>
+<li><a class="text-muted" href="https://https://futbollibretv.net/DMCA.html">DMCA</a></li>
 <br />
 <div style="text-align:center;">
 <small class="d-block mb-3 text-muted">Fútbol Libre TV 2023 &copy; Todos los derechos reservados.</small>
