--- a/en-vivo/espn-3/index.html
+++ b/en-vivo/espn-3/index.html
@@ -2,25 +2,25 @@
 <!doctype html>
 <html lang="en">
 <head>
-<script type="text/javascript" src="/z-4834911"></script>
+
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <meta name="description" content="ESPN 3 en VIVO es un canal deportivo creado en el año 2002 y que comenzó a emitirse en Argentina, Bolivia, Chile, Paraguay y Uruguay, despues en Perú. Su programación es integramente deportivo, fundamentalmente sobre fútbol, tenis entre otras disciplinas. Asimismo, emiten programas sobre los campeonatos de diferentes deportes de Argentina.">
 <meta name="robots" content="noodp" />
-<link rel="canonical" href="https://librefutboltv.com/espn-3/" />
+<link rel="canonical" href="https://https://futbollibretv.net/espn-3/" />
 <link rel="publisher" href="https://plus.google.com/110597823755835387054" />
 <meta property="og:locale" content="es_ES" />
 <meta property="og:type" content="article" />
 <meta property="og:title" content="Click para ESPN 3 en VIVO ONLINE en DIRECTO por Internet - Fútbol Libre TV" />
 <meta property="og:description" content="ESPN  en VIVO es un canal deportivo creado en el año 2002 y que comenzó a emitirse en Argentina, Bolivia, Chile, Paraguay y Uruguay, despues en Perú. Su programación es integramente deportivo, fundamentalmente sobre fútbol, tenis entre otras disciplinas. Asimismo, emiten programas sobre los campeonatos de diferentes deportes de Argentina." />
-<meta property="og:url" content="http://librefutboltv.com/espn-3/" />
+<meta property="og:url" content="http://https://futbollibretv.net/espn-3/" />
 <meta property="og:site_name" content="Fútbol Libre TV" />
 <meta property="article:publisher" content="https://www.facebook.com/FutbolLibre/" />
-<meta property="og:image" content="http://librefutboltv.com/img/ESPN_3.png" />
+<meta property="og:image" content="http://https://futbollibretv.net/img/ESPN_3.png" />
 <meta name="twitter:card" content="summary_large_image" />
 <meta name="twitter:description" content="Ver ESPN 3 en VIVO ONLINE por Internet en DIRECTO. Canal acceso instantáneo a los mejores partidos de futbol y el mejor deporte. Mirar Ya" />
 <meta name="twitter:title" content="Ver ESPN 3 en VIVO ONLINE en DIRECTO por Internet" />
-<meta name="twitter:image" content="http://librefutboltv.com/img/ESPN_3.png" />
+<meta name="twitter:image" content="http://https://futbollibretv.net/img/ESPN_3.png" />
 <meta name="author" content="Fútbol Libre">
 <link rel="apple-touch-icon" sizes="57x57" href="../../favicon/apple-icon-57x57.png">
 <link rel="apple-touch-icon" sizes="60x60" href="../../favicon/apple-icon-60x60.png">
@@ -40,19 +40,50 @@
 <meta name="msapplication-TileImage" content="../../favicon/ms-icon-144x144.png">
 <meta name="theme-color" content="#ffffff">
 <title>ESPN 3 en VIVO (Ver en DIRECTO) - Fútbol Libre TV</title>
-
+<link href="../css/styles.css" rel="stylesheet">
+  	<link href='https://unpkg.com/boxicons@2.1.1/css/boxicons.min.css' rel='stylesheet'>
 <link href="../../css/bootstrap.css" rel="stylesheet">
 
 <link href="../../css/portada.css" rel="stylesheet">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 </head>
 <body>
-<div id="navbar"></div>
-<script>
-            $(document).ready(function() {
-                $("#navbar").load("../../html/navbar.html");
-            });
-         </script>
+<nav>
+        <div class="nav-bar">
+            <i class='bx bx-menu sidebarOpen' ></i>
+            <span class="logo navLogo"><a href="/">Futbol Libre</a></span>
+            <div class="menu">
+                <div class="logo-toggle">
+                    <span class="logo"><a href="#"><img src="/img/logo-futbolLibre.webp" alt="Logo de Fútbol Libre TV" width="25" height="25">Futbol Libre</a></span>
+                    <i class='bx bx-x siderbarClose'></i>
+                </div>
+                <ul class="nav-links">
+                    <li><a href="/en-vivo/espn-1/">ESPN</a></li>
+                    <li><a href="/en-vivo/tyc-sports/">Tyc Sports</a></li>
+                    <li><a href="/en-vivo/directv-sports
+/">DS Sports</a></li>
+                    <li><a href="/en-vivo/espn-premium/">ESPN Premium</a></li>
+                    <li><a href="/en-vivo/tv-publica/">TV Publica</a></li>
+                </ul>
+            </div>
+            <div class="darkLight-searchBox">
+                <div class="dark-light">
+                    <i class='bx bx-moon moon'></i>
+                    <i class='bx bx-sun sun'></i>
+                </div>
+                <div class="searchBox">
+                   <div class="searchToggle">
+                    <i class='bx bx-x cancel'></i>
+                    <i class='bx bx-search search'></i>
+                   </div>
+                    <div class="search-field">
+                        <input type="text" placeholder="Search...">
+                        <i class='bx bx-search'></i>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </nav>
 <div class="container">
 <div class="card-deck mb-3 text-center">
 <div class="card mb-4 box-shadow">
@@ -83,7 +114,7 @@
 <p align="left"><strong>ESPN 3 en vivo</strong> es una señal multiplataforma de la cadena ESPN, que comenzó a emitir el 14 de noviembre de 2011 para toda América Latina. Está dedicado a un público más joven, su perfil es de hombres entre 16 y 24 años de edad, con nivel económico alto. <strong>ESPN3</strong> es el primer canal deportivo en <strong>Latinoamérica</strong> que tiene la disponibilidad de verse en forma simultánea en diferentes plataformas, es decir, tanto en televisión, celulares, computadores y tabletas digitales.</p>
 <p align="left">La <strong>programación</strong> de ESPN 3 está dedicada a los deportes de acción, es decir los deportes extremos tanto de verano como de invierno, así como los de aventura, surf y running. Desde su lanzamiento, se ofrece en definición estándar y alta definición. Es un servicio de <strong>streaming</strong> de programas deportivos de la cadena ESPN para clientes de Estados Unidos. La red está disponible para personas que reciben conexión a Internet de alta velocidad o suscripción de televisión por cable.</p>
 <p align="left">ESPN 3 señal en vivo tambien transmite otros torneos el fútbol americano universitario, baloncesto universitario de la NCAA, la NBA, Copas Mundiales de la FIFA, clasificación al mundial, la Premier League, la Serie A de Italia, la Liga de España y otras grandes ligas del fútbol internacional, los cuatro “Grand Slam” eventos de tenis, campeonatos de golf, el rugby mundial.</p>
-<p align="center"><img src="https://librefutboltv.com/img/ESPN_3.png" alt="logo del canal ESPN 3" title="ESPN 3 en vivo" width="%50" height="140" /></p>
+<p align="center"><img src="https://https://futbollibretv.net/img/ESPN_3.png" alt="logo del canal ESPN 3" title="ESPN 3 en vivo" width="%50" height="140" /></p>
 <div id="footer"></div>
 <script>
 $(document).ready(function() {
