--- a/en-vivo/fox-sports-2/index.html
+++ b/en-vivo/fox-sports-2/index.html
@@ -2,25 +2,27 @@
 <!doctype html>
 <html lang="en">
 <head>
-<script type="text/javascript" src="/z-4834911"></script>
+
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <meta name="description" content="Fox Sports 2 en VIVO es un canal de cable y satélite totalmente deportivo, es la segunda señal de Fox Sports, antes llamado Fox Sports + a partir del 5 de Noviembre del 2012 se le cambio de nombre para llamarse Fox Sports 2 esta cadena transmite eventos deportivos locales e internacionales más destacados como la Copa Libertadores, UEFA Champions League, Copa Sudamericana, UEFA Europa League, la WWE entre otros.">
 <meta name="author" content="Fútbol Libre">
 <title>Fox Sports 2 en VIVO (Ver en DIRECTO) ONLINE - Fútbol Libre TV</title>
 <meta name="robots" content="noodp" />
-<link rel="canonical" href="https://librefutboltv.com/en-vivo/fox-sports-2/" />
+   <link href="../css/styles.css" rel="stylesheet">
+  	<link href='https://unpkg.com/boxicons@2.1.1/css/boxicons.min.css' rel='stylesheet'>
+<link rel="canonical" href="https://https://futbollibretv.net/en-vivo/fox-sports-2/" />
 <meta property="og:locale" content="es_ES" />
 <meta property="og:type" content="article" />
 <meta property="og:title" content="Click para ver Fox Sports 2 en VIVO ONLINE en DIRECTO por Internet - Fútbol Libre TV" />
 <meta property="og:description" content="Fox Sports 2 en VIVO es un canal de cable y satélite totalmente deportivo, es la segunda señal de Fox Sports, antes llamado Fox Sports + a partir del 5 de Noviembre del 2012 se le cambio de nombre para llamarse Fox Sports 2 esta cadena transmite eventos deportivos locales e internacionales más destacados como la Copa Libertadores, UEFA Champions League, Copa Sudamericana, UEFA Europa League, la WWE entre otros." />
-<meta property="og:url" content="https://librefutboltv.com/en-vivo/fox-sports-2/" />
+<meta property="og:url" content="https://https://futbollibretv.net/en-vivo/fox-sports-2/" />
 <meta property="og:site_name" content="Fútbol Libre TV" />
-<meta property="og:image" content="https://librefutboltv.com/img/logo-canal/Fox_Sports_2.webp" />
+<meta property="og:image" content="https://https://futbollibretv.net/img/logo-canal/Fox_Sports_2.webp" />
 <meta name="twitter:card" content="summary_large_image" />
 <meta name="twitter:description" content="Fox Sports 2 en VIVO es un canal de cable y satélite totalmente deportivo, es la segunda señal de Fox Sports, antes llamado Fox Sports + a partir del 5 de Noviembre del 2012 se le cambio de nombre para llamarse Fox Sports 2 esta cadena transmite eventos deportivos locales e internacionales más destacados como la Copa Libertadores, UEFA Champions League, Copa Sudamericana, UEFA Europa League, la WWE entre otros." />
 <meta name="twitter:title" content="Ver Fox Sports 2 en VIVO ONLINE en DIRECTO por Internet" />
-<meta name="twitter:image" content="http://librefutboltv.com/img/Fox_Sports_2.png" />
+<meta name="twitter:image" content="http://https://futbollibretv.net/img/Fox_Sports_2.png" />
 
 <link rel="apple-touch-icon" sizes="57x57" href="/favicon/apple-icon-57x57.png">
 <link rel="apple-touch-icon" sizes="60x60" href="favicon/apple-icon-60x60.png">
@@ -44,16 +46,44 @@
 
 <link href="/css/portada.css" rel="stylesheet">
 <script async src='/cdn-cgi/bm/cv/669835187/api.js'></script></head>
-<div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-white border-bottom box-shadow">
-<a class="my-0 mr-md-auto font-weight-normal fl" rel="home" href="https://librefutboltv.com">
-Fútbol Libre TV
-</a>
 
-<a class="btn btn-outline-fl" rel="home" href="https://librefutboltv.com">
-<img src="https://librefutboltv.com/img/logo-futbolLibre.webp" alt="Logo de Fútbol Libre TV" width="25" height="25">
-</a>
-</div>
 <body>
+   <nav>
+        <div class="nav-bar">
+            <i class='bx bx-menu sidebarOpen' ></i>
+            <span class="logo navLogo"><a href="/">Futbol Libre</a></span>
+            <div class="menu">
+                <div class="logo-toggle">
+                    <span class="logo"><a href="#"><img src="/img/logo-futbolLibre.webp" alt="Logo de Fútbol Libre TV" width="25" height="25">Futbol Libre</a></span>
+                    <i class='bx bx-x siderbarClose'></i>
+                </div>
+                <ul class="nav-links">
+                    <li><a href="/en-vivo/espn-1/">ESPN</a></li>
+                    <li><a href="/en-vivo/tyc-sports/">Tyc Sports</a></li>
+                    <li><a href="/en-vivo/directv-sports
+/">DS Sports</a></li>
+                    <li><a href="/en-vivo/espn-premium/">ESPN Premium</a></li>
+                    <li><a href="/en-vivo/tv-publica/">TV Publica</a></li>
+                </ul>
+            </div>
+            <div class="darkLight-searchBox">
+                <div class="dark-light">
+                    <i class='bx bx-moon moon'></i>
+                    <i class='bx bx-sun sun'></i>
+                </div>
+                <div class="searchBox">
+                   <div class="searchToggle">
+                    <i class='bx bx-x cancel'></i>
+                    <i class='bx bx-search search'></i>
+                   </div>
+                    <div class="search-field">
+                        <input type="text" placeholder="Search...">
+                        <i class='bx bx-search'></i>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </nav>
 <div class="container">
 <div class="card-deck mb-3 text-center">
 <div class="card mb-4 box-shadow">
@@ -95,7 +125,7 @@ Fútbol Libre TV
 </div>
 <div class="sharethis-inline-share-buttons"></div>
 <br />
-<img src="//librefutboltv.com/img/Fox-Sports-2.png" alt="Logo del canal Fox Sports 2" title="Fox Sports 2 en vivo" width="%50" height="140" /><br><br>
+<img src="//https://futbollibretv.net/img/Fox-Sports-2.png" alt="Logo del canal Fox Sports 2" title="Fox Sports 2 en vivo" width="%50" height="140" /><br><br>
 <p align="left">
 <strong>Fox Sports 2</strong> es un canal de cable y satélite totalmente deportivo, es la segunda señal de<b> Fox Sports</b>, antes llamado Fox Sports + a partir del 5 de Noviembre del 2012 se le cambio de nombre para llamarse Fox Sports 2 esta cadena transmite eventos deportivos locales e internacionales más destacados como la <a href="../copa-libertadores/"><b>Copa Libertadores</b>,</a> <b>UEFA Champions League</b>,<b> <a href="../copa-sudamericana/">Copa Sudamericana</a></b>, <b>UEFA Europa League</b>, la <a href="https://es.wikipedia.org/wiki/WWE"><b>WWE </b></a>entre otros.
 </p>
@@ -112,7 +142,7 @@ Fútbol Libre TV
 <div class="col-6 col-md">
 <h5>Fútbol Libre</h5>
 <ul class="list-unstyled text-small">
-<li><a class="text-muted" href="https://librefutboltv.com/DMCA.html">DMCA</a></li>
+<li><a class="text-muted" href="https://https://futbollibretv.net/DMCA.html">DMCA</a></li>
 <br />
 <div style="text-align:center;">
 <small class="d-block mb-3 text-muted">Fútbol Libre TV 2023 &copy; Todos los derechos reservados.</small>
