--- a/en-vivo/fox-sports-3/index.html
+++ b/en-vivo/fox-sports-3/index.html
@@ -2,26 +2,28 @@
 <!doctype html>
 <html lang="en">
 <head>
-<script type="text/javascript" src="/z-4834911"></script>
+
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <meta name="description" content="Fox Sports 3 en VIVO es un canal deportivo de televisión de pago operado por Fox International Channels y que inició transmisiones el 5 de noviembre de 2012 para América Latina (excepto Brasil). Fox Sports 3 reemplazó al canal Speed en su versión para Latinoamérica">
 <meta name="author" content="Fútbol Libre">
 <title>Ver Fox Sports 3 en VIVO ONLINE - Fútbol Libre TV</title>
 <meta name="robots" content="noodp" />
-<link rel="canonical" href="https://librefutboltv.com/en-vivo/fox-sports-3/" />
+            <link href="../css/styles.css" rel="stylesheet">
+  	<link href='https://unpkg.com/boxicons@2.1.1/css/boxicons.min.css' rel='stylesheet'>
+<link rel="canonical" href="https://https://futbollibretv.net/en-vivo/fox-sports-3/" />
 <link rel="publisher" href="https://plus.google.com/110597823755835387054" />
 <meta property="og:locale" content="es_ES" />
 <meta property="og:type" content="article" />
 <meta property="og:title" content="Click para ver Fox Sports 3 en VIVO ONLINE en DIRECTO por Internet - Fútbol Libre TV" />
 <meta property="og:description" content="Fox Sports 3 en VIVO es un canal deportivo de televisión de pago operado por Fox International Channels y que inició transmisiones el 5 de noviembre de 2012 para América Latina (excepto Brasil). Fox Sports 3 reemplazó al canal Speed en su versión para Latinoamérica" />
-<meta property="og:url" content="https://librefutboltv.com/en-vivo/fox-sports-3/" />
+<meta property="og:url" content="https://https://futbollibretv.net/en-vivo/fox-sports-3/" />
 <meta property="og:site_name" content="Fútbol Libre TV" />
-<meta property="og:image" content="//librefutboltv.com/img/Fox_Sports_3.png" />
+<meta property="og:image" content="//https://futbollibretv.net/img/Fox_Sports_3.png" />
 <meta name="twitter:card" content="summary_large_image" />
 <meta name="twitter:description" content="Fox Sports 3 en VIVO es un canal deportivo de televisión de pago operado por Fox International Channels y que inició transmisiones el 5 de noviembre de 2012 para América Latina (excepto Brasil). Fox Sports 3 reemplazó al canal Speed en su versión para Latinoamérica" />
 <meta name="twitter:title" content="Ver Fox Sports 3 en VIVO ONLINE en DIRECTO por Internet" />
-<meta name="twitter:image" content="//librefutboltv.com/img/Fox_Sports_3.png" />
+<meta name="twitter:image" content="//https://futbollibretv.net/img/Fox_Sports_3.png" />
 
 <link rel="apple-touch-icon" sizes="57x57" href="../../favicon/apple-icon-57x57.png">
 <link rel="apple-touch-icon" sizes="60x60" href="favicon/apple-icon-60x60.png">
@@ -47,12 +49,42 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <script async src='/cdn-cgi/bm/cv/669835187/api.js'></script></head>
 <body>
-<div id="navbar"></div>
-<script>
-            $(document).ready(function() {
-                $("#navbar").load("../../html/navbar.html");
-            });
-         </script>
+<nav>
+        <div class="nav-bar">
+            <i class='bx bx-menu sidebarOpen' ></i>
+            <span class="logo navLogo"><a href="/">Futbol Libre</a></span>
+            <div class="menu">
+                <div class="logo-toggle">
+                    <span class="logo"><a href="#"><img src="/img/logo-futbolLibre.webp" alt="Logo de Fútbol Libre TV" width="25" height="25">Futbol Libre</a></span>
+                    <i class='bx bx-x siderbarClose'></i>
+                </div>
+                <ul class="nav-links">
+                    <li><a href="/en-vivo/espn-1/">ESPN</a></li>
+                    <li><a href="/en-vivo/tyc-sports/">Tyc Sports</a></li>
+                    <li><a href="/en-vivo/directv-sports
+/">DS Sports</a></li>
+                    <li><a href="/en-vivo/espn-premium/">ESPN Premium</a></li>
+                    <li><a href="/en-vivo/tv-publica/">TV Publica</a></li>
+                </ul>
+            </div>
+            <div class="darkLight-searchBox">
+                <div class="dark-light">
+                    <i class='bx bx-moon moon'></i>
+                    <i class='bx bx-sun sun'></i>
+                </div>
+                <div class="searchBox">
+                   <div class="searchToggle">
+                    <i class='bx bx-x cancel'></i>
+                    <i class='bx bx-search search'></i>
+                   </div>
+                    <div class="search-field">
+                        <input type="text" placeholder="Search...">
+                        <i class='bx bx-search'></i>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </nav>
 <div class="container">
 <div class="card-deck mb-3 text-center">
 <div class="card mb-4 box-shadow">
@@ -95,7 +127,7 @@
 <div class="sharethis-inline-share-buttons"></div>
 <br />
 <br />
-<img src="//librefutboltv.com/img/Fox-Sports-3.png" alt="Logo del canal Fox Sports 3" title="Fox Sports 3 en vivo" width="%50" height="140" /><br><br>
+<img src="//https://futbollibretv.net/img/Fox-Sports-3.png" alt="Logo del canal Fox Sports 3" title="Fox Sports 3 en vivo" width="%50" height="140" /><br><br>
 <p align="left">
 <strong>Fox Sports 3 </strong>es un canal deportivo de
 <stron>
