--- a/en-vivo/tnt-sports-online/index.html
+++ b/en-vivo/tnt-sports-online/index.html
@@ -3,24 +3,26 @@
 <!doctype html>
 <html lang="es">
 <head>
-<script type="text/javascript" src="/z-4834911"></script>
+
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <meta name="description" content="Ver Canal TNT Sports Premium online en vivo y en directo. Futbol Libre TV Television gratis por internet">
 <meta name="author" content="Fútbol Libre">
-<link rel="canonical" href="https://librefutboltv.com/en-vivo/tnt-sports/" />
+<link rel="canonical" href="https://https://futbollibretv.net/en-vivo/tnt-sports/" />
 <link rel="publisher" href="https://plus.google.com/110597823755835387054" />
 <meta property="og:locale" content="es_ES" />
 <meta property="og:type" content="article" />
+	<link href="../css/styles.css" rel="stylesheet">
+  	<link href='https://unpkg.com/boxicons@2.1.1/css/boxicons.min.css' rel='stylesheet'>
 <meta property="og:title" content="Fútbol Libre TV. Click para ver TNT Sports Premium en VIVO ONLINE por Internet en DIRECTO. Fútbol Argentino" />
 <meta property="og:description" content="Fútbol Libre TV. Ver Canal TNT Sports Premium online en vivo y en directo. Television gratis por internet." />
-<meta property="og:url" content="http://librefutboltv.com/en-vivo/tnt-sports/" />
+<meta property="og:url" content="http://https://futbollibretv.net/en-vivo/tnt-sports/" />
 <meta property="og:site_name" content="Fútbol Libre TV" />
-<meta property="og:image" content="http://librefutboltv.com/img/TNT_Sports.png" />
+<meta property="og:image" content="http://https://futbollibretv.net/img/TNT_Sports.png" />
 <meta name="twitter:card" content="summary_large_image" />
 <meta name="twitter:description" content="Fútbol Libre TV Ver canal TNT Sports Premium en VIVO ONLINE por Internet en DIRECTO." />
 <meta name="twitter:title" content="Ver Fútbol Libre TV TNT Sports en VIVO ONLINE en DIRECTO por Internet - Fútbol Libre TV" />
-<meta name="twitter:image" content="http://librefutboltv.com/img/TNT_Sports.png" />
+<meta name="twitter:image" content="http://https://futbollibretv.net/img/TNT_Sports.png" />
 <title>Ver Canal TNT Sports Premium online en VIVO y en directo. Futbol Libre TV</title>
 
 <link rel="apple-touch-icon" sizes="57x57" href="../../favicon/apple-icon-57x57.png">
@@ -47,12 +49,42 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 </head>
 <body>
-<div id="navbar"></div>
-<script>
-            $(document).ready(function() {
-                $("#navbar").load("../../html/navbar.html");
-            });
-         </script>
+<nav>
+        <div class="nav-bar">
+            <i class='bx bx-menu sidebarOpen' ></i>
+            <span class="logo navLogo"><a href="/">Futbol Libre</a></span>
+            <div class="menu">
+                <div class="logo-toggle">
+                    <span class="logo"><a href="#"><img src="/img/logo-futbolLibre.webp" alt="Logo de Fútbol Libre TV" width="25" height="25">Futbol Libre</a></span>
+                    <i class='bx bx-x siderbarClose'></i>
+                </div>
+                <ul class="nav-links">
+                    <li><a href="/en-vivo/espn-1/">ESPN</a></li>
+                    <li><a href="/en-vivo/tyc-sports/">Tyc Sports</a></li>
+                    <li><a href="/en-vivo/directv-sports
+/">DS Sports</a></li>
+                    <li><a href="/en-vivo/espn-premium/">ESPN Premium</a></li>
+                    <li><a href="/en-vivo/tv-publica/">TV Publica</a></li>
+                </ul>
+            </div>
+            <div class="darkLight-searchBox">
+                <div class="dark-light">
+                    <i class='bx bx-moon moon'></i>
+                    <i class='bx bx-sun sun'></i>
+                </div>
+                <div class="searchBox">
+                   <div class="searchToggle">
+                    <i class='bx bx-x cancel'></i>
+                    <i class='bx bx-search search'></i>
+                   </div>
+                    <div class="search-field">
+                        <input type="text" placeholder="Search...">
+                        <i class='bx bx-search'></i>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </nav>
 <div class="container">
 <div class="card-deck mb-3 text-center">
 <div class="card mb-4 box-shadow">
@@ -78,7 +110,7 @@
 </div>
 <div class="sharethis-inline-share-buttons"></div>
 <br />
-<div><center><img src="https://librefutboltv.com/img/TNT_Sports.png" alt="logo del canal TNT Sports" title="TNT Sports Premium en vivo" width="%50" height="140" /></center>
+<div><center><img src="https://https://futbollibretv.net/img/TNT_Sports.png" alt="logo del canal TNT Sports" title="TNT Sports Premium en vivo" width="%50" height="140" /></center>
 	
 	
 	<ul>
@@ -93,13 +125,13 @@
 	
 			
 	<div id="item1"><h2>¿Qué es el canal de TNT Sports Premium en vivo?</h2>
-<p align="left"> Ver canal <strong>TNT Sports Premium</strong> online en vivo y en directo. <strong>TNT Sports Premium</strong> es un canal de televisión de Argentina encargado en transmitir los partidos de Primera división del futbol argentino (<strong>Superliga Argentina</strong>) junto a el canal <strong><a href="https://librefutboltv.com/en-vivo/espn-premium/">ESPN PREMIUM</a></strong>.
+<p align="left"> Ver canal <strong>TNT Sports Premium</strong> online en vivo y en directo. <strong>TNT Sports Premium</strong> es un canal de televisión de Argentina encargado en transmitir los partidos de Primera división del futbol argentino (<strong>Superliga Argentina</strong>) junto a el canal <strong><a href="https://https://futbollibretv.net/en-vivo/espn-premium/">ESPN PREMIUM</a></strong>.
 		
 		</p> </div>
 	
 	
 <div id="item2"><h2>¿Cómo puedo ver el canal TNT Sports Premium online en vivo y en directo?</h2>
-<p align="left">Para ver todos los partidos que transmite <strong>TNT Sports Premium</strong> se debe ingresar a la pagina <a href="https://librefutboltv.com/"><strong>Futbol Libre TV</strong></a> a la hora que se este jugando un partido de la <strong>Liga Profesional Argentina de Fútbol</strong> y luego hacer click en el logo del canal o en el boton "Ver Canal". Luego al ingresar al canal que desea ver debe hacer click en el Play del reproductor que esta debajo del titulo "<strong>Canal TNT Sports Premium Online en VIVO y en directo</strong>". Tambien se puede ver TNT Sports Premium en vivo y en directo en la pagina oficial tntsports.com.ar para ver desde la computadora/ordenador o desde el <strong>celular</strong> tanto si es Android o Iphone iOS. También se puede ver online en vivo y en directo desde la television conectadose directamente con el <strong>Chromecast</strong>. </div>
+<p align="left">Para ver todos los partidos que transmite <strong>TNT Sports Premium</strong> se debe ingresar a la pagina <a href="https://https://futbollibretv.net/"><strong>Futbol Libre TV</strong></a> a la hora que se este jugando un partido de la <strong>Liga Profesional Argentina de Fútbol</strong> y luego hacer click en el logo del canal o en el boton "Ver Canal". Luego al ingresar al canal que desea ver debe hacer click en el Play del reproductor que esta debajo del titulo "<strong>Canal TNT Sports Premium Online en VIVO y en directo</strong>". Tambien se puede ver TNT Sports Premium en vivo y en directo en la pagina oficial tntsports.com.ar para ver desde la computadora/ordenador o desde el <strong>celular</strong> tanto si es Android o Iphone iOS. También se puede ver online en vivo y en directo desde la television conectadose directamente con el <strong>Chromecast</strong>. </div>
 
 </p>
 	
@@ -110,12 +142,12 @@
 	
 	
 	<div id="item4"><h2>¿Cómo ver partidos del fútbol argentino en vivo sin pagar?</h2>
-<p align="left">Para ver todos los partidos de fútbol del Torneo Argentino de primera división en vivo y en directo se pueden ir a algunos de los dos canales que lo transmiten que son <strong><a href="https://librefutboltv.com/en-vivo/espn-premium/">ESPN PREMIUM</a></strong> y <strong><a href="https://librefutboltv.com/en-vivo/tnt-sports/">TNT Sports Premium</a></strong>. Anteriormente todos estos partidos eran gratuitos y se podian ver gracias a <strong>Futbol para Todos</strong> online en vivo y en directo.
+<p align="left">Para ver todos los partidos de fútbol del Torneo Argentino de primera división en vivo y en directo se pueden ir a algunos de los dos canales que lo transmiten que son <strong><a href="https://https://futbollibretv.net/en-vivo/espn-premium/">ESPN PREMIUM</a></strong> y <strong><a href="https://https://futbollibretv.net/en-vivo/tnt-sports/">TNT Sports Premium</a></strong>. Anteriormente todos estos partidos eran gratuitos y se podian ver gracias a <strong>Futbol para Todos</strong> online en vivo y en directo.
 	
 	</p> </div>
 	
 		<div id="item5"><h2>¿Qué es y como ver el Pack Fútbol en vivo y en directo?</h2>
-<p align="left"> El <strong>Pack Fútbol</strong> es un paquete que incluye los canales online <strong><a href="https://librefutboltv.com/en-vivo/espn-premium/">ESPN PREMIUM</a></strong> (antes llamado <strong>Fox Sports Premium</strong>) y <strong><a href="https://librefutboltv.com/en-vivo/tnt-sports/">TNT Sports Premium</a></strong> que transmite todos los partidos en vivo y en directo en calidad HD que se encuentran en Flow en los siguientes canales: Fox Sports Premium HD está en el canal 603 y TNT Sports Premium en el canal numero 604.
+<p align="left"> El <strong>Pack Fútbol</strong> es un paquete que incluye los canales online <strong><a href="https://https://futbollibretv.net/en-vivo/espn-premium/">ESPN PREMIUM</a></strong> (antes llamado <strong>Fox Sports Premium</strong>) y <strong><a href="https://https://futbollibretv.net/en-vivo/tnt-sports/">TNT Sports Premium</a></strong> que transmite todos los partidos en vivo y en directo en calidad HD que se encuentran en Flow en los siguientes canales: Fox Sports Premium HD está en el canal 603 y TNT Sports Premium en el canal numero 604.
 	
 	</p> </div>
 	
