--- a/en-vivo/tudn/index.html
+++ b/en-vivo/tudn/index.html
@@ -6,14 +6,16 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <meta name="description" content="TUDN es un canal deportivo de television por suscripción mexicano-estadounisense de habla hispana, antes conocido como Univisión Deportes Network o por su abreviatura, UDN. Es propiedad de Univisión Communications, una compañía de medios que ha enfocado su contenido al mercado hispanoparlante que vive en los Estados Unidos desde su creación en 1962.">
-<link rel="canonical" href="https://librefutboltv.com/en-vivo/tudn/" />
+<link rel="canonical" href="https://https://futbollibretv.net/en-vivo/tudn/" />
 <meta property="og:locale" content="es_ES" />
 <meta property="og:type" content="article" />
+  <link href="../css/styles.css" rel="stylesheet">
+  	<link href='https://unpkg.com/boxicons@2.1.1/css/boxicons.min.css' rel='stylesheet'>
 <meta property="og:title" content="Click para TUDN en VIVO ONLINE en DIRECTO por Internet - Fútbol Libre TV" />
 <meta property="og:description" content="TUDN es un canal deportivo de television por suscripción mexicano-estadounisense de habla hispana, antes conocido como Univisión Deportes Network o por su abreviatura, UDN. Es propiedad de Univisión Communications, una compañía de medios que ha enfocado su contenido al mercado hispanoparlante que vive en los Estados Unidos desde su creación en 1962." />
-<meta property="og:url" content="https://librefutboltv.com/en-vivo/tudn/" />
+<meta property="og:url" content="https://https://futbollibretv.net/en-vivo/tudn/" />
 <meta property="og:site_name" content="Fútbol Libre TV" />
-<meta property="og:image" content="https://librefutboltv.com/img/logo-canal/TUDN.webp" />
+<meta property="og:image" content="https://https://futbollibretv.net/img/logo-canal/TUDN.webp" />
 <meta name="twitter:card" content="summary_large_image" />
 <meta name="twitter:title" content="Ver TUDN en VIVO ONLINE en DIRECTO por Internet" />
 <link rel="apple-touch-icon" sizes="57x57" href="../../favicon/apple-icon-57x57.png">
@@ -41,15 +43,42 @@
 <style type="text/css"> iframe{width: 90%; height: 600px;}@media only screen and (max-width: 600px){iframe{width: 100%; height: 360px;}}</style>
 </head>
 <body>
-<div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-white border-bottom box-shadow">
-<a class="my-0 mr-md-auto font-weight-normal fl" rel="home" href="https://librefutboltv.com">
-Fútbol Libre TV
-</a>
-
-<a class="btn btn-outline-fl" rel="home" href="https://librefutboltv.com">
-<img src="https://librefutboltv.com/img/logo-futbolLibre.webp" alt="Logo de Fútbol Libre TV" width="25" height="25">
-</a>
-</div>
+<nav>
+        <div class="nav-bar">
+            <i class='bx bx-menu sidebarOpen' ></i>
+            <span class="logo navLogo"><a href="/">Futbol Libre</a></span>
+            <div class="menu">
+                <div class="logo-toggle">
+                    <span class="logo"><a href="#"><img src="/img/logo-futbolLibre.webp" alt="Logo de Fútbol Libre TV" width="25" height="25">Futbol Libre</a></span>
+                    <i class='bx bx-x siderbarClose'></i>
+                </div>
+                <ul class="nav-links">
+                    <li><a href="/en-vivo/espn-1/">ESPN</a></li>
+                    <li><a href="/en-vivo/tyc-sports/">Tyc Sports</a></li>
+                    <li><a href="/en-vivo/directv-sports
+/">DS Sports</a></li>
+                    <li><a href="/en-vivo/espn-premium/">ESPN Premium</a></li>
+                    <li><a href="/en-vivo/tv-publica/">TV Publica</a></li>
+                </ul>
+            </div>
+            <div class="darkLight-searchBox">
+                <div class="dark-light">
+                    <i class='bx bx-moon moon'></i>
+                    <i class='bx bx-sun sun'></i>
+                </div>
+                <div class="searchBox">
+                   <div class="searchToggle">
+                    <i class='bx bx-x cancel'></i>
+                    <i class='bx bx-search search'></i>
+                   </div>
+                    <div class="search-field">
+                        <input type="text" placeholder="Search...">
+                        <i class='bx bx-search'></i>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </nav>
 <div class="container">
 <div class="card-deck mb-3 text-center">
 <div class="card mb-4 box-shadow">
@@ -70,7 +99,7 @@ Fútbol Libre TV
 <div class="sharethis-inline-share-buttons"></div>
 
 <br />
-<img src="https://librefutboltv.com/img/logo-canal/TUDN.webp" alt="Logo del canal TUDN" title="TUDN en vivo"><br>
+<img src="https://https://futbollibretv.net/img/logo-canal/TUDN.webp" alt="Logo del canal TUDN" title="TUDN en vivo"><br>
 <p align="left"><strong>TUDN</strong> es un canal deportivo de televisión por suscripción mexicano-estadounidense de habla hispana, antes conocido como Univisión Deportes Network o por su abreviatura, UDN. Es propiedad de Univisión Communications, una compañía de medios que ha enfocado su contenido al mercado hispanoparlante que vive en los Estados Unidos desde su creación en 1962.</p>
 <br />
 <footer class="pt-4 my-md-5 pt-md-5 border-top">
@@ -86,7 +115,7 @@ Fútbol Libre TV
 <div class="col-6 col-md">
 <h5>Fútbol Libre</h5>
 <ul class="list-unstyled text-small">
-<li><a class="text-muted" href="https://librefutboltv.com/DMCA.html">DMCA</a></li>
+<li><a class="text-muted" href="https://https://futbollibretv.net/DMCA.html">DMCA</a></li>
 <br />
 <div style="text-align:center;">
 <small class="d-block mb-3 text-muted">Fútbol Libre TV 2023 &copy; Todos los derechos reservados.</small>
