--- a/en-vivo/tv-publica/index.html
+++ b/en-vivo/tv-publica/index.html
@@ -3,18 +3,20 @@
 <!doctype html>
 <html lang="es">
 <head>
-<script type="text/javascript" src="/z-4834911"></script>
+
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <meta name="description" content="TV Pública en vivo, (llamado La Televisión Pública Argentina o El Canal 7), es un canal de televisión de Argentina, una de las cinco emisoras de aire de l...">
-<link rel="canonical" href="https://librefutboltv.com/en-vivo/tv-publica/" />
+<link rel="canonical" href="https://https://futbollibretv.net/en-vivo/tv-publica/" />
 <meta property="og:locale" content="es_ES" />
 <meta property="og:type" content="article" />
+  <link href="../css/styles.css" rel="stylesheet">
+  	<link href='https://unpkg.com/boxicons@2.1.1/css/boxicons.min.css' rel='stylesheet'>
 <meta property="og:title" content="Click para TyC Sports en VIVO ONLINE en DIRECTO por Internet - Fútbol Libre TV" />
 <meta property="og:description" content="TV Pública en vivo, (llamado La Televisión Pública Argentina o El Canal 7), es un canal de televisión de Argentina, una de las cinco emisoras de aire de l..." />
-<meta property="og:url" content="https://librefutboltv.com/en-vivo/tv-publica/" />
+<meta property="og:url" content="https://https://futbollibretv.net/en-vivo/tv-publica/" />
 <meta property="og:site_name" content="Fútbol Libre TV" />
-<meta property="og:image" content="https://librefutboltv.com/img/logo-canal/TV_Publica.png" />
+<meta property="og:image" content="https://https://futbollibretv.net/img/logo-canal/TV_Publica.png" />
 <link rel="apple-touch-icon" sizes="57x57" href="../../favicon/apple-icon-57x57.png">
 <link rel="apple-touch-icon" sizes="60x60" href="../../favicon/apple-icon-60x60.png">
 <link rel="apple-touch-icon" sizes="72x72" href="../../favicon/apple-icon-72x72.png">
@@ -40,15 +42,42 @@
 <style type="text/css"> iframe{width: 90%; height: 600px;}@media only screen and (max-width: 600px){iframe{width: 100%; height: 360px;}}</style>
 </head>
 <body>
-<div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-white border-bottom box-shadow">
-<a class="my-0 mr-md-auto font-weight-normal fl" rel="home" href="https://librefutboltv.com">
-Fútbol Libre TV
-</a>
-
-<a class="btn btn-outline-fl" rel="home" href="https://librefutboltv.com">
-<img src="https://librefutboltv.com/img/logo-futbolLibre.webp" alt="Logo de Fútbol Libre TV" width="25" height="25">
-</a>
-</div>
+<nav>
+        <div class="nav-bar">
+            <i class='bx bx-menu sidebarOpen' ></i>
+            <span class="logo navLogo"><a href="/">Futbol Libre</a></span>
+            <div class="menu">
+                <div class="logo-toggle">
+                    <span class="logo"><a href="#"><img src="/img/logo-futbolLibre.webp" alt="Logo de Fútbol Libre TV" width="25" height="25">Futbol Libre</a></span>
+                    <i class='bx bx-x siderbarClose'></i>
+                </div>
+                <ul class="nav-links">
+                    <li><a href="/en-vivo/espn-1/">ESPN</a></li>
+                    <li><a href="/en-vivo/tyc-sports/">Tyc Sports</a></li>
+                    <li><a href="/en-vivo/directv-sports
+/">DS Sports</a></li>
+                    <li><a href="/en-vivo/espn-premium/">ESPN Premium</a></li>
+                    <li><a href="/en-vivo/tv-publica/">TV Publica</a></li>
+                </ul>
+            </div>
+            <div class="darkLight-searchBox">
+                <div class="dark-light">
+                    <i class='bx bx-moon moon'></i>
+                    <i class='bx bx-sun sun'></i>
+                </div>
+                <div class="searchBox">
+                   <div class="searchToggle">
+                    <i class='bx bx-x cancel'></i>
+                    <i class='bx bx-search search'></i>
+                   </div>
+                    <div class="search-field">
+                        <input type="text" placeholder="Search...">
+                        <i class='bx bx-search'></i>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </nav>
 <div class="container">
 <div class="card-deck mb-3 text-center">
 <div class="card mb-4 box-shadow">
@@ -74,7 +103,7 @@ Fútbol Libre TV
 </div>
 <div class="sharethis-inline-share-buttons"></div>
 <br />
-<img src="https://librefutboltv.com/img/logo-canal/TV_Publica.png" alt="Logo del canal TV Pública" title="TV Pública en vivo"><br><br>
+<img src="https://https://futbollibretv.net/img/logo-canal/TV_Publica.png" alt="Logo del canal TV Pública" title="TV Pública en vivo"><br><br>
 <p align="left"><strong>TV Pública en vivo</strong>, (llamado La <strong>Televisión Pública Argentina</strong> o <strong>El Canal 7</strong>), es un canal de televisión de Argentina, una de las cinco emisoras de aire de la ciudad de Buenos Aires, donde tiene su sede.</p><p align="left">Televisión Pública Argentina es la cadena de mayor cobertura televisiva en el territorio argentino a través de repetidoras ubicadas en el interior del país.<p /><p align="left">Su programación es generalista, con énfasis en actividades <strong>deportivas</strong>, culturales, educativas y ficciones, además de poseer un servicio propio de noticias.</p>
 <br />
 <footer class="pt-4 my-md-5 pt-md-5 border-top">
@@ -90,7 +119,7 @@ Fútbol Libre TV
 <div class="col-6 col-md">
 <h5>Fútbol Libre</h5>
 <ul class="list-unstyled text-small">
-<li><a class="text-muted" href="https://librefutboltv.com/DMCA.html">DMCA</a></li>
+<li><a class="text-muted" href="https://https://futbollibretv.net/DMCA.html">DMCA</a></li>
 <br />
 <div style="text-align:center;">
 <small class="d-block mb-3 text-muted">Fútbol Libre TV 2023 &copy; Todos los derechos reservados.</small>
